--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,8 @@
         <title>Pretend Company | Consulting Group</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="../src/styles/css/index.css" />
     </head>
     <body>
         <div id="root"/>
